<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rob_item_margin_lr"
        android:layout_marginTop="@dimen/rob_item_margin_tb"
        android:orientation="horizontal">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/rob_item_title_text_size" 
	        android:text="@string/project_number"/>
        
        <TextView 
	        android:id="@+id/tv_number"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/rob_item_margin_left_title"
	        android:textSize="@dimen/rob_item_title_text_size"
	        android:text="CRJ1223"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rob_item_margin_lr"
	    android:layout_marginTop="@dimen/rob_item_margin_tb"
        android:orientation="horizontal">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/rob_item_text"
	        android:textSize="@dimen/rob_item_text_size" 
	        android:text="@string/construct_address"/>
        
        <TextView 
	        android:id="@+id/tv_address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/rob_item_margin_left_title"
	        android:textColor="@color/rob_item_text"
	        android:textSize="@dimen/rob_item_text_size" 
	        android:text="上海市"/>
        
    </LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/rob_item_margin_lr"
        android:layout_marginTop="@dimen/rob_item_con_margin_top"
        android:layout_marginBottom="@dimen/rob_item_margin_tb"
        android:orientation="horizontal"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/rob_item_text"
	        android:textSize="@dimen/rob_item_text_size"
	        android:text="@string/last_time"/>
        
        <TextView 
	        android:id="@+id/tv_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/rob_item_margin_left_title"
	        android:textColor="@color/rob_item_text"
	        android:textSize="@dimen/rob_item_text_size"
	        android:text="2016-06-12"
            />
        
    </LinearLayout>
	
</LinearLayout>
